<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar_text" />

    <LinearLayout
        android:id="@+id/retrieve_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="@dimen/dp_4"
                android:textSize="@dimen/sp_18"
                android:text="+86"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_4">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_phone"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/input_verify_code"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentRight="true"
                android:background="@drawable/selector_common_corners_button"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_12"
                android:text="@string/get_verify_code"/>

        </RelativeLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_22"
            android:background="@drawable/selector_common_corners_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:text="@string/next"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reset_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:visibility="visible"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/dp_6"
                android:text="@string/input_new_pwd"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.xylife.community.widget.CustomAppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/dp_6"
                android:text="@string/confirm_new_pwd"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.xylife.community.widget.CustomAppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_common_corners_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_36"
            android:text="@string/reset_pwd"/>

    </LinearLayout>

</LinearLayout>